--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,8 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.10",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "lcobucci/jwt": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
