--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -2,3 +2,10 @@ FROM node:21-alpine
 
 WORKDIR /app
 
+COPY package.json package-lock.json ./
+RUN npm install
+
+COPY . .
+
+EXPOSE 5173
+ENTRYPOINT [ "npm", "run", "dev"]
